Setup General Layout for Editor and Create Collapse Button to promote code reuse

--- a/ComicMaker.Blazor/Client/_Imports.razor
+++ b/ComicMaker.Blazor/Client/_Imports.razor
@@ -5,5 +5,7 @@
 @using Microsoft.JSInterop
 @using ComicMaker.Blazor.Client
 @using ComicMaker.Blazor.Client.Shared
+@using ComicMaker.Blazor.Client.Components.Common
+@using ComicMaker.Blazor.Client.Components.Creator
 @using Blazorise
 @using Blazorise.Components
