--- a/ComicMaker.Blazor/Client/Components/Creator/EditorComponent.razor
+++ b/ComicMaker.Blazor/Client/Components/Creator/EditorComponent.razor
@@ -2,18 +2,7 @@
 <div class="d-flex">
     <div class="flex-shrink-1">
         <div class="d-flex flex-column bg-secondary">
-            <Button>
-                <i class="fas fa-photo-video text-white"></i><br />
-                <span class="text-white">Assets</span>
-            </Button>
-            <Button>
-                <i class="fa fa-images text-white"></i><br />
-                <span class="text-white">Images</span>
-            </Button>
-            <Button>
-                <i class="fa fa-images text-white"></i><br />
-                <span class="text-white">Images</span>
-            </Button>
+           <TabBarComponent Model="Tabs"/>
         </div>
     </div>
     <div class="flex-fill">
@@ -24,7 +13,7 @@
                         <CardHeader Class="py-0">
                             <div class="d-flex">
                                 <Heading Size="HeadingSize.Is5">
-                                    <Button Clicked="@(()=>ShowImages = !ShowImages)">Audio</Button>
+                                    <Button Clicked="@(()=>ShowImages = !ShowImages)">Images</Button>
                                 </Heading>
                                 <CollapseButtonComponent Class="ml-auto" Clicked="@(()=>ShowImages = !ShowImages)" Toggle="@ShowImages" />
                             </div>
