Refactored Collapse to use less code

--- a/ComicMaker.Blazor/Client/Components/Common/CollapseButtonComponent.razor
+++ b/ComicMaker.Blazor/Client/Components/Common/CollapseButtonComponent.razor
@@ -1,6 +1,6 @@
 ﻿@inherits CollapseButtonComponentBase
 <Button Class="@Class" Clicked="OnClick">
-    @if (Toggle)
+    @if (Model.Show)
     {
         <i class="fas fa-chevron-up"></i>
     }
