Added Initial Models, Entities, and Add Cosmos.Table library for storage

--- a/ComicMaker.Blazor/Client/Components/Creator/EditorComponent.razor
+++ b/ComicMaker.Blazor/Client/Components/Creator/EditorComponent.razor
@@ -46,7 +46,7 @@
                 </Accordion>
             </div>
             <div class="col-sm-12 vh-100 col-md-9">
-                <div class="d-flex h-100 align-items-center flex-column">
+                <div class="d-flex h-100 align-items-center flex-column" style="margin-bottom: -100px;">
                     <div class="">Top</div>
                     <div class="mb-auto flex-fill">
                         <div class="bg-danger" style="height: 450px; width: 800px; z-index:-300;">
