Added Blazed.Toast, Completed Vertical Slice for ProjectCreate and ProjectList Components, Refactored out EditorComponentBase and ListComponentBase

--- a/ComicMaker.Blazor/Client/Shared/MainLayout.razor
+++ b/ComicMaker.Blazor/Client/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using Blazored.Toast.Configuration
+@inherits LayoutComponentBase
 <div class="main">
-        @Body
+    @Body
 </div>
+<BlazoredToasts Position="ToastPosition.BottomRight" />
