--- a/ComicMaker.Blazor/Client/_Imports.razor
+++ b/ComicMaker.Blazor/Client/_Imports.razor
@@ -6,6 +6,8 @@
 @using ComicMaker.Blazor.Client
 @using ComicMaker.Blazor.Client.Shared
 @using ComicMaker.Blazor.Client.Components.Common
-@using ComicMaker.Blazor.Client.Components.Creator
+@using ComicMaker.Blazor.Client.Components.Projects
 @using Blazorise
 @using Blazorise.Components
+@using Blazored.Toast
+@using Blazored.Toast.Services
