--- a/ComicMaker.Blazor/Client/Components/Projects/ProjectDetailComponent.razor
+++ b/ComicMaker.Blazor/Client/Components/Projects/ProjectDetailComponent.razor
@@ -1,4 +1,4 @@
-﻿@inherits EditorComponentBase
+﻿@inherits ProjectDetailComponentBase
 
 <div class="d-flex h-100">
     <div class="flex-shrink-1">
